--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,7 +44,7 @@
         </button>
         <a class="navbar-brand" href="{{ site.root_url }}/">Project Open Data</a>
       </div>
-      <div class="navbar-collapse collapse">
+<!--      <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a class="edit-button" href="{{ edit_url }}"><span>Edit this Page</span></a></li>
           <li class="dropdown">
@@ -69,6 +69,6 @@
           </li>
           <li><a href="https://github.com/{{ site.org_name }}/{{ site.repo_name }}/issues">Discuss</a></li>
         </ul>
-      </div><!--/.nav-collapse -->
+      </div><!--/.nav-collapse -->-->
     </div>
   </div>
