bringing the nav bar back

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,31 +44,27 @@
         </button>
         <a class="navbar-brand" href="{{ site.root_url }}/">FITARA</a>
       </div>
-<!--      <div class="navbar-collapse collapse">
+      <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a class="edit-button" href="{{ edit_url }}"><span>Edit this Page</span></a></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Definitions<span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sections<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="/v1.1/schema">Metadata Schema v1.1</a></li>
-              <li><a href="/glossary">Open Data Glossary</a></li>
-              <li><a href="/open-standards">Data Standards</a></li>
-              <li><a href="/principles">Open Data Principles </a></li>
-              <li><a href="/open-licenses">Open Licenses</a></li>
+              <li><a href="">Introduction</a></li>
+              <li><a href="">Body</a></li>
+              <li><a href="">Attachment A</a></li>
+              <li><a href="">Attachment B</a></li>
+              <li><a href="">Attachment C</a></li>
+              <li><a href="">Attachment D</a></li>
+              <li><a href="">Attachment E</a></li>
+              <li><a href="">Attachment F</a></li>
+              <li><a href="">Attachment G</a></li>
+              <li><a href="">Attachment H</a></li>
             </ul>
           </li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Guidance<span class="caret"></span></a>
-            <ul class="dropdown-menu" role="menu">
-              <li><a href="/policy-memo">Policy - OMB M-13-13</a></li>
-              <li><a href="/implementation-guide">Implementation Guide</a></li>
-              <li><a href="/catalog">Public Data Listing</a></li>
-              <li><a href="http://goals.performance.gov/opendata">Open Data CAP Goal</a></li>
-              <li><a href="/faq">FAQ</a></li>
-            </ul>
-          </li>
+          <li><a href="">Downloadable PDF</a></li>
           <li><a href="https://github.com/{{ site.org_name }}/{{ site.repo_name }}/issues">Discuss</a></li>
         </ul>
-      </div><!--/.nav-collapse -->-->
+      </div><!--/.nav-collapse -->
     </div>
   </div>
