--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,7 +42,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="{{ site.root_url }}/">FITARA</a>
+        <a class="navbar-brand" href="https://www.whitehouse.gov/omb">Office of Management and Budget</a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
