--- a/_includes/header.html
+++ b/_includes/header.html
@@ -50,16 +50,16 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sections<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="">Introduction</a></li>
-              <li><a href="">Body</a></li>
-              <li><a href="">Attachment A</a></li>
-              <li><a href="">Attachment B</a></li>
-              <li><a href="">Attachment C</a></li>
-              <li><a href="">Attachment D</a></li>
-              <li><a href="">Attachment E</a></li>
-              <li><a href="">Attachment F</a></li>
-              <li><a href="">Attachment G</a></li>
-              <li><a href="">Attachment H</a></li>
+              <li><a href="http://gsa.github.io/fitara/">Introduction</a></li>
+              <li><a href="http://gsa.github.io/fitara/">Body</a></li>
+              <li><a href="http://gsa.github.io/fitara/">Attachment A</a></li>
+              <li><a href="http://gsa.github.io/fitara/">Attachment B</a></li>
+              <li><a href="http://gsa.github.io/fitara/">Attachment C</a></li>
+              <li><a href="http://gsa.github.io/fitara/">Attachment D</a></li>
+              <li><a href="http://gsa.github.io/fitara/">Attachment E</a></li>
+              <li><a href="http://gsa.github.io/fitara/">Attachment F</a></li>
+              <li><a href="http://gsa.github.io/fitara/">Attachment G</a></li>
+              <li><a href="http://gsa.github.io/fitara/">Attachment H</a></li>
             </ul>
           </li>
           <li><a href="">Downloadable PDF</a></li>
