making links absolute

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,15 +7,15 @@
           <a class="btn btn-default" href="https://github.com/{{ site.org_name }}/{{ site.repo_name }}/commits/{{ site.branch }}">View Revision History</a>
         </div>
         <div class="pull-right">
-          <iframe src="/assets/ghbtns/github-btn.html?user={{ site.org_name }}&repo={{ site.repo_name }}&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
+          <iframe src=http://gsa.github.io/fitara/assets/ghbtns/github-btn.html?user={{ site.org_name }}&repo={{ site.repo_name }}&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
         </div>
       </div>
     </div>
   </div><!-- /container -->
 
 
-  <script src="/assets/js/vendor/jquery-1.11.1.min.js"></script>
-  <script src="/assets/js/bootstrap.min.js"></script>
+  <script src="http://gsa.github.io/fitara/assets/js/vendor/jquery-1.11.1.min.js"></script>
+  <script src="http://gsa.github.io/fitara/assets/js/bootstrap.min.js"></script>
 
 
 
