--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,9 +11,9 @@
 
   <title>{{ page.title }} - {{ site.title }}</title>
 
-  <link rel="shortcut icon" href="http://gsa.github.io/fitara/favicon.ico"/>
-  <link rel="stylesheet" href="http://gsa.github.io/fitara/assets/css/bootstrap.css">
-  <link rel="stylesheet" href="http://gsa.github.io/fitara/assets/css/site.css">
+  <link rel="shortcut icon" href="http://whitehouse.github.io/fitara/favicon.ico"/>
+  <link rel="stylesheet" href="http://whitehouse.github.io/fitara/assets/css/bootstrap.css">
+  <link rel="stylesheet" href="http://whitehouse.github.io/fitara/assets/css/site.css">
 
   <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
 
