--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,9 +6,9 @@
           <a class="btn btn-primary" href="{{ edit_url }}">Edit this Page</a>
           <a class="btn btn-default" href="https://github.com/{{ site.org_name }}/{{ site.repo_name }}/commits/{{ site.branch }}">View Revision History</a>
         </div>
-        <div class="pull-right">
+<!--        <div class="pull-right">
           <iframe src=http://whitehouse.github.io/fitara/assets/ghbtns/github-btn.html?user={{ site.org_name }}&repo={{ site.repo_name }}&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
-        </div>
+        </div>-->
       </div>
     </div>
   </div><!-- /container -->
