renamed sections in navbar, added anchords
/, #mainbody, #A, #B, #C, #D, #E

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,18 +51,15 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sections<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="http://whitehouse.github.io/fitara/">Introduction</a></li>
-              <li><a href="http://whitehouse.github.io/fitara/">Body</a></li>
-              <li><a href="http://whitehouse.github.io/fitara/">Attachment A</a></li>
-              <li><a href="http://whitehouse.github.io/fitara/">Attachment B</a></li>
-              <li><a href="http://whitehouse.github.io/fitara/">Attachment C</a></li>
-              <li><a href="http://whitehouse.github.io/fitara/">Attachment D</a></li>
-              <li><a href="http://whitehouse.github.io/fitara/">Attachment E</a></li>
-              <li><a href="http://whitehouse.github.io/fitara/">Attachment F</a></li>
-              <li><a href="http://whitehouse.github.io/fitara/">Attachment G</a></li>
-              <li><a href="http://whitehouse.github.io/fitara/">Attachment H</a></li>
+              <li><a href="http://whitehouse.github.io/fitara/#mainbody">Proposed Guidance Main Body</a></li>
+              <li><a href="http://whitehouse.github.io/fitara/#A">A: Common Baseline and CIO Assignment Plan</a></li>
+              <li><a href="http://whitehouse.github.io/fitara/#B">B: Definitions of Terms Used in this Guidance</a></li>
+              <li><a href="http://whitehouse.github.io/fitara/#C">C: Common Baseline Template</a></li>
+              <li><a href="http://whitehouse.github.io/fitara/#D">D: FY 2015 PortfolioStat</a></li>
+              <li><a href="http://whitehouse.github.io/fitara/#E">E: Management Maturity Framework</a></li>
             </ul>
           </li>
-          <li><a href="">Downloadable PDF</a></li>
+          <li><a href="">Download PDF</a></li>
           <li><a href="https://github.com/{{ site.org_name }}/{{ site.repo_name }}/issues">Discuss</a></li>
         </ul>
       </div><!--/.nav-collapse -->
