--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,7 +46,8 @@
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a class="edit-button" href="{{ edit_url }}"><span>Edit this Page</span></a></li>
+          <li><a class="edit-button" href="{{ edit_url }}"><span>Edit Guidance</span></a></li>
+		  <li><a class="edit-button" href="https://github.com/{{ site.org_name }}/{{ site.repo_name }}/issues">Provide Feedback</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sections<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
@@ -60,7 +61,6 @@
             </ul>
           </li>
           <li><a href="">Download PDF</a></li>
-          <li><a href="https://github.com/{{ site.org_name }}/{{ site.repo_name }}/issues">Discuss</a></li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
