--- a/assets/_sass/styles.scss
+++ b/assets/_sass/styles.scss
@@ -224,7 +224,7 @@ $slimmer: new-breakpoint(min-width 641px max-width 980px 12);
 
   #navigation_bar {
     visibility: visible;
-    display: none;
+    display: block;
     position: fixed;
     width: 100%;
     height: 0;
