--- a/assets/_sass/styles.scss
+++ b/assets/_sass/styles.scss
@@ -553,7 +553,8 @@ $slimmer: new-breakpoint(min-width 641px max-width 980px 12);
   }
 
   #navigation_bar {
-    display: none;
+    visibility: visible;
+    display: block;
   }
 
   a {
