--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,13 +51,14 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sections<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="http://whitehouse.github.io/fitara/">Introduction</a></li>
-              <li><a href="http://whitehouse.github.io/fitara/#mainbody">Proposed Guidance Main Body</a></li>
-              <li><a href="http://whitehouse.github.io/fitara/#A">A: Common Baseline and CIO Assignment Plan</a></li>
-              <li><a href="http://whitehouse.github.io/fitara/#B">B: Definitions of Terms Used in this Guidance</a></li>
-              <li><a href="http://whitehouse.github.io/fitara/#C">C: Common Baseline Template</a></li>
-              <li><a href="http://whitehouse.github.io/fitara/#D">D: FY 2015 PortfolioStat</a></li>
-              <li><a href="http://whitehouse.github.io/fitara/#E">E: Management Maturity Framework</a></li>
+              <li><a href="">Introduction</a></li>
+              <li><a href="#mainbody">Proposed Guidance Main Body</a></li>
+              <li><a href="#A">A: Common Baseline and CIO Assignment Plan</a></li>
+              <li><a href="#B">B: Definitions of Terms Used in this Guidance</a></li>
+              <li><a href="#C">C: Common Baseline Template</a></li>
+              <li><a href="#D">D: FY 2015 PortfolioStat</a></li>
+              <li><a href="#E">E: Management Maturity Framework</a></li>
+              <li><a href="#endnotes">Endnotes</a></li>
             </ul>
           </li>
           <li><a href="">Download PDF</a></li>
