--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,6 +16,8 @@
 
   <script src="http://whitehouse.github.io/fitara/assets/js/vendor/jquery-1.11.1.min.js"></script>
   <script src="http://whitehouse.github.io/fitara/assets/js/bootstrap.min.js"></script>
+<!-- DAP code -->
+<script id="_fed_an_ua_tag" type="text/javascript" src="https://cio.gov/wp-content/themes/twentyten/assets/js/federated-analytics.js?agency=GSA&sub-agency=OGP&pua=UA-46219405-1"></script>
 
 
 
