--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -27,8 +27,9 @@ h1 {
   font-size: 28px;
 }
 h2 {
-  font-size: 20px;
-  line-height: 24px;
+  font-size: 36px;
+  line-height: 32px;
+  border-bottom: 1px solid #eee;
   margin-top: 40px;
 }
 h3 { margin-top: 30px; }
