--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
   <meta name="description" content="{{ site.desc }}">
   <meta name="viewport" content="width=device-width">
 
-  <title>{{ page.title }} - {{ site.title }}</title>
+  <title>Management and Oversight of Federal IT - OMB</title>
 
   <link rel="shortcut icon" href="http://whitehouse.github.io/fitara/favicon.ico"/>
   <link rel="stylesheet" href="http://whitehouse.github.io/fitara/assets/css/bootstrap.css">
