--- a/_includes/header.html
+++ b/_includes/header.html
@@ -52,6 +52,8 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sections<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="">Introduction</a></li>
+              <li><a href="#timeframe">Timeframe and Instructions</a></li>
+	      <li><a href="#faq">Frequently Asked Questions</a></li>
               <li><a href="#mainbody">Main Body of Proposed Guidance</a></li>
               <li><a href="#A">Attachment A: Common Baseline and CIO Assignment Plan</a></li>
               <li><a href="#B">Attachment B: Definitions of Terms Used in this Guidance</a></li>
