--- a/_includes/header.html
+++ b/_includes/header.html
@@ -52,14 +52,14 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sections<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="">Introduction</a></li>
-              <li><a href="#timeframe">Timeframe and Instructions</a></li>
-	      <li><a href="#faq">Frequently Asked Questions</a></li>
+              <li><a href="#timeframe">Timeframe and Instructions for Public Comment</a></li>
+	      <li><a href="#faq">Frequently Asked Questions (FAQ)</a></li>
               <li><a href="#mainbody">Main Body of Proposed Guidance</a></li>
-              <li><a href="#A">Attachment A: Common Baseline and CIO Assignment Plan</a></li>
-              <li><a href="#B">Attachment B: Definitions of Terms Used in this Guidance</a></li>
-              <li><a href="#C">Attachment C: Common Baseline Template</a></li>
+              <li><a href="#A">Attachment A: Common Baseline for IT Management and CIO Assignment Plan</a></li>
+              <li><a href="#B">Attachment B: Definitions of Terms for the Purposes of this Guidance</a></li>
+              <li><a href="#C">Attachment C: Template for Agency Common Baseline Self-Assessment and Plan</a></li>
               <li><a href="#D">Attachment D: FY 2015 PortfolioStat</a></li>
-              <li><a href="#E">Attachment E: Management Maturity Framework</a></li>
+              <li><a href="#E">Attachment E: Investment and Portfolio Management Maturity Framework</a></li>
               <li><a href="#endnotes">Endnotes</a></li>
             </ul>
           </li>
