--- a/_includes/header.html
+++ b/_includes/header.html
@@ -52,7 +52,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sections<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="">Introduction</a></li>
-              <li><a href="#timeframe">Timeframe and Instructions for Public Comment</a></li>
+              <li><a href="#timeframe">Timeframe and Instructions for Public Feedback</a></li>
 	      <li><a href="#faq">Frequently Asked Questions (FAQ)</a></li>
               <li><a href="#mainbody">Main Body of Proposed Guidance</a></li>
               <li><a href="#A">Attachment A: Common Baseline for IT Management and CIO Assignment Plan</a></li>
